[package]
name = "stream-replay"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
serde_json = "1.0"
ndarray = "0.15"
ndarray-npy = "0.8"
clap = { version = "3.2.20", features = ["derive"] }
spin_sleep = "1.0"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows = "0.46.0"
