[package]
name = "android"
version = "0.1.0"
edition = "2021"

[lib]
name = "replay"
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
stream-replay-core = { path = "../core" }
stream-replay-tx ={ path = "../tx" }
stream-replay-rx ={ path = "../rx" }

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.21" }
ndk = { version = "0.9", features = ["api-level-26"] }
ndk-sys = { version = "0.6" }
